change color move_btn

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <!-- Phần của Thắng -->
+
+    <!-- Thanh quang cao tren -->
     <div class="header-top-bar">
         <img src="images/anhduan1.webp" alt="">
     </div>
@@ -58,6 +61,7 @@
             </ul>
         </div>
     </div>
+
     <!-- Phần của Hoàng -->
     <div class="khoitong1">
         <div class="tong1">
@@ -115,7 +119,7 @@
 
                 </div>
 
-                <!-- nút di chuyenr  -->
+                <!-- nút di chuyển  -->
                 <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
                 </button>
