--- a/index.html
+++ b/index.html
@@ -18,7 +18,41 @@
 
     <!-- Thanh quang cao tren -->
     <div class="header-top-bar">
-        <img src="images/anhduan1.webp" alt="">
+        <div id="topdemo" class="carousel slide" data-bs-ride="carousel">
+
+            <!--nút silde -->
+            <!-- <div class="carousel-indicators">
+                <button type="button" data-bs-target="#topdemo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#topdemo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#topdemo" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#topdemo" data-bs-slide-to="3"></button>
+                <button type="button" data-bs-target="#topdemo" data-bs-slide-to="4"></button>
+            </div> -->
+
+            <!-- khối silde -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/images/anhduan1.webp" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/anhbanner2.webp" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/anhbanner3.webp" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/anhbanner4.webp" alt="">
+                </div>
+            </div>
+
+            <!-- nút di chuyển  -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#topdemo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#topdemo" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
     </div>
     <div class="header">
         <nav>
@@ -128,7 +162,7 @@
                 </button>
             </div>
             <div class="tong2phai">
-                <a href=""><img src="/images/anh9.png" alt=""></a>
+                <a href=""><img style="padding-bottom: 10px;" src="/images/anh9.png" alt=""></a>
                 <a href=""><img src="/images/anh10.png" alt=""></a>
             </div>
         </div>
