--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Du an</title>
+    <title>Thế giới di động</title>
     <link rel="stylesheet" href="Thang.css">
     <link rel="stylesheet" href="Hoang.css">
+    <link rel="stylesheet" href="Chinh.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -299,6 +300,47 @@
 
         </div>
     </div>
+    <!-- Phần chính -->
+    <div class="content-main">
+        <div class="grid-container">
+            <div class="grid-item">
+                <a href="">
+                    <div class="product">
+                        <img src="images/products/dongho1.jpg" alt="">
+                        <div class="product-text">
+                            <li>Xiaomi Redmi Band 2 dây TPU</li>
+                            <li><img src="images/products/item1.png" alt="">Online giá rẻ quá</li>
+                            <li>
+                                <p>990.000<sup>đ</sup></p> -20%
+                            </li>
+                            <li>540.000<sup>đ</sup></li>
+                            <li>
+                                <i class="fa-solid fa-star" style="color: #fff700;"></i>
+                                <i class="fa-solid fa-star" style="color: #fff700;"></i>
+                                <i class="fa-solid fa-star" style="color: #fff700;"></i>
+                                <i class="fa-solid fa-star" style="color: #fff700;"></i>
+                                <i class="fa-solid fa-star" style="color: #a6a6a6;"></i>
+                                271
+                            </li>
+                            <li><button><i class="fa-solid fa-circle-plus" style="color: #0400ff;"></i> so sánh</button>
+                            </li>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+            <div class="grid-item">2</div>
+            <div class="grid-item">3</div>
+            <div class="grid-item">4</div>
+            <div class="grid-item">5</div>
+            <div class="grid-item">6</div>
+            <div class="grid-item">7</div>
+            <div class="grid-item">8</div>
+            <div class="grid-item">9</div>
+            <div class="grid-item">10</div>
+            <!-- Thêm các grid item khác nếu cần -->
+        </div>
+    </div>
     <div class="khoitong2">
         <hr>
         <div class="khoitong2tren">
@@ -351,7 +393,7 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
     <div class="khoitong2duoi">
         <p>© 2018. Công ty cổ phần Thế Giới Di Động. GPDKKD: 0303217354 do sở KH & ĐT TP.HCM cấp ngày 02/01/2007.
