--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </ul>
         </div>
     </div>
-<!-- Phần của Hoàng -->
+    <!-- Phần của Hoàng -->
     <div class="khoitong1">
         <div class="tong1">
             <a href="https://www.thegioididong.com/dong-ho-thong-minh">
@@ -303,7 +303,7 @@
     <div class="content-main">
         <div class="grid-container">
             <div class="grid-item">
-                <a href="">
+                <a href="product_details.html">
                     <div class="product">
                         <img src="images/products/dongho1.jpg" alt="">
                         <div class="product-text">
