Thang-page-details-finished

--- a/product_details.html
+++ b/product_details.html
@@ -292,7 +292,7 @@
                     </button>
                 </div>
                 <div class="info-other">
-                    <a href="">Xem tất cả điểm nổi bật</a>
+                    <p><a href="">Xem tất cả điểm nổi bật </a><span id="pageIndicator">(1/8)</span></p>
                     <div class="icon-list">
                         <img src="images/details/icon1.png" alt="">
                         <img src="images/details/icon4.jpg" alt="">
@@ -314,11 +314,80 @@
                             </div>
                         </div>
                     </div>
-                    <img src="images/details/anh_other_1.jpg" alt="">
+                    <img src="images/details/anh_other_1.jpg" alt="" width="100%">
                 </div>
 
             </div>
-            <div class="col-sm-5"></div>
+            <div class="col-sm-5">
+                <div class="chi-tiet-gia">
+                    <p>Giá tại <a href="">Hà Nội <i class="fa-solid fa-chevron-down"></i></a></p>
+                    <h5><b>540.000<sup>đ</sup></b><s> 990.000<sup>đ</sup></s><span> -45%</span></h5>
+                    <div class="diem">
+                        <img src="images/details/logo_details.png" alt="">
+                        <p><b>+5.400</b> điểm tích luỹ Quà Tặng VIP</p>
+                        <img src="images/details/question_mark.png" alt="">
+                    </div>
+                    <p>Giá và khuyên mãi dự kiến áp dụng đến 23:59 | 31/10</p>
+                    <p><a href=""><i class="fa-solid fa-location-dot"></i> Chọn địa chỉ nhận hàng</a> để biết thời gian
+                        giao.</p>
+                    <button type="submit">MUA NGAY</button>
+                    <p class="hotline">Gọi đặt mua <a href="">1800.1060 </a> (7:30 - 22:00)</p>
+                    <div class="uu-dai">
+                        <h6><b>2 ưu đãi thêm </b><span> dự kiến áp dụng đến 23:59 | 31/10</span></h6>
+                        <p><i class="fa-solid fa-circle-check" style="color: #1ae000;"></i> Mua quạt điều hoà giảm đến
+                            56% (không áp dụng khuyên mãi khác).<a href="">(click xem chi tiết)</a></p>
+                        <p><i class="fa-solid fa-circle-check" style="color: #1ae000;"></i> Mua Bếp điện từ đôi, Hút mùi
+                            giảm sốc đến 44% (không áp dụng khuyến mãi khác).<a href="">(click xem chi tiết)</a></p>
+                    </div>
+                </div>
+                <div class="qr-link">
+                    <figure>
+                        <img src="images/details/qr.png" alt="Đây là qr" width="80px">
+                        <figcaption><i>Quét để tải app</i></figcaption>
+                    </figure>
+                    <div class="qr-link-text">
+                        <h5><img src="images/details/logo_details.png" alt=""> Quà Tặng VIP</h5>
+                        <p>Tích & Sử dụng điểm <br> cho khách hàng thân thiết</p>
+                        <i>Sản phẩm của tập đoàn MWG</i>
+                    </div>
+                    <div class="down">
+                        <button><img src="images/details/ggplay.png" alt=""></button>
+                        <button><img src="images/details/appstore.png" alt=""></button>
+                    </div>
+                </div>
+                <div class="cau-hinh">
+                    <h4><b>Cấu hình Vòng đeo tay thông minh Xiaomi Redmi Band 2</b></h4>
+                    <table>
+                        <tr class="odd">
+                            <td>Màn hình:</td>
+                            <td>TFT1.47 inch</td>
+                        </tr>
+                        <tr class="even">
+                            <td>Thời lượng pin:</td>
+                            <td>Khoảng 14 ngày</td>
+                        </tr>
+                        <tr class="odd">
+                            <td>Kết nối với hệ điều hành:</td>
+                            <td>iOS 12 trở lên, Android 6.0 trở lên</td>
+                        </tr>
+                        <tr class="even">
+                            <td>Mặt:</td>
+                            <td>Kính cường lực 2.5D, 42.81 mm</td>
+                        </tr>
+                        <tr class="odd">
+                            <td>Tính năng cho sức khỏe:</td>
+                            <td>Theo dõi mức độ stress, Tính quãng đường chạy, Đếm số bước chân, Đo nồng độ oxy (SpO2), Theo dõi giấc ngủ, Đo nhịp tim, Theo dõi chu kỳ kinh nguyệt</td>
+                        </tr>
+                        <tr class="even">
+                            <td>Hãng</td>
+                            <td><p>Xiaomi. <a href=""> Xem thông tin hãng</a></p></td>
+                        </tr>
+                    </table>
+                    <p><i class="fa-solid fa-paperclip" style="color: #8c8c8c;"></i><a href="">  Hướng Dẫn Sử Dụng Tiếng Việt</a> [PDF, 0.1MB]</p>
+                    <button class="btn-xemthem" type="button">Xem thêm yêu cầu chi tiết <i class="fa-solid fa-caret-right" style="color: #005eff;"></i></button>
+                </div>
+                
+            </div>
         </div>
         <div class="row">
             <div class="col-sm">col-sm</div>
@@ -326,6 +395,7 @@
             <div class="col-sm">col-sm</div>
         </div>
     </div>
+    <script src="Thegioididong.js"></script>
 </body>
 
 </html>
