--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <!-- Phần chính -->
     <div class="content-main">
         <div class="grid-container">
-            <div class="grid-item">
+            <!-- <div class="grid-item">
                 <a href="product_details.html">
                     <div class="product">
                         <img src="images/products/dongho1.jpg" alt="">
@@ -336,7 +336,7 @@
             <div class="grid-item">7</div>
             <div class="grid-item">8</div>
             <div class="grid-item">9</div>
-            <div class="grid-item">10</div>
+            <div class="grid-item">10</div> -->
             <!-- Thêm các grid item khác nếu cần -->
         </div>
     </div>
