--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thế giới di động</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="Thang.css">
     <link rel="stylesheet" href="Hoang.css">
     <link rel="stylesheet" href="Chinh.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -68,9 +69,13 @@
                     <form action=""><input type="text" placeholder="Bạn tìm gì ..."><i class='bx bx-search'></i></form>
                 </li>
                 <li><a href="">Tài khoản & Đơn hàng</a></li>
-                <li><a href=""><i class='bx bx-cart'></i>
-                        <p>Giỏ hàng</p>
-                    </a></li>
+                <li class="shopping">
+                    <!-- <a href=""> -->
+                    <i class='bx bx-cart'></i>
+                    <span class="quantity">0</span>
+                    <p class="giohang">Giỏ hàng</p>
+                    <!-- </a>< -->
+                </li>
                 <li>
                     <div class="list-items">
                         <div><a href="">24h<br>Công nghệ</a></div>
@@ -338,6 +343,16 @@
             <div class="grid-item">9</div>
             <div class="grid-item">10</div> -->
             <!-- Thêm các grid item khác nếu cần -->
+        </div>
+    </div>
+    <div class="card1">
+        <h1>Giỏ hàng</h1>
+        <ul class="listCard">
+        </ul>
+        <div class="checkOut">
+            <div class="total">0</div>
+            <div class="closeShopping">Đóng</div>
+            <a href="card_product.html" class="button1">Đến trang đặt hàng <i class="fa-solid fa-angles-right" style="color: #005eff;"></i></a>
         </div>
     </div>
     <div class="khoitong2">
