add-product-to-card

--- a/card_product.html
+++ b/card_product.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="top-content">
-        <p class="close">
+        <a href="index.html">
             <i class="fa-solid fa-angle-left" style="color: #005eff;"></i> Mua thêm sản phẩm khác
-        </p>
+        </a>
         <h3>Giỏ hàng của bạn</h3>
     </div>
     <div class="card2">
