--- a/product_details.html
+++ b/product_details.html
@@ -340,7 +340,7 @@
                     <p>Giá và khuyên mãi dự kiến áp dụng đến 23:59 | 31/10</p>
                     <p><a href="#"><i class="fa-solid fa-location-dot"></i> Chọn địa chỉ nhận hàng</a> để biết thời gian
                         giao.</p>
-                    <button type="submit">MUA NGAY</button>
+                    <button type="submit"><a href="/card_product.html">MUA NGAY</a></button>
                     <p class="hotline">Gọi đặt mua <a href="#">1800.1060 </a> (7:30 - 22:00)</p>
                     <div class="uu-dai">
                         <h6><b>2 ưu đãi thêm </b><span> dự kiến áp dụng đến 23:59 | 31/10</span></h6>
