--- a/product_details.html
+++ b/product_details.html
@@ -57,8 +57,8 @@
     <div class="header">
         <nav>
             <ul>
-                <li id="logo">
-                </li>
+                <a href="/index.html"><li id="logo">
+                </li></a>
                 <li id="adress-form"><a href="#">
                         <p>Xem giá tồn kho tại: <b>Đà nẵng</b></p><i class='bx bxs-down-arrow'></i>
                     </a>
@@ -67,7 +67,7 @@
                     <form action=""><input type="text" placeholder="Bạn tìm gì ..."><i class='bx bx-search'></i></form>
                 </li>
                 <li><a href="#">Tài khoản & Đơn hàng</a></li>
-                <li class="shopping"><a href="#"><i class='bx bx-cart'></i>
+                <li class="shopping"><a href="/card_product.html"><i class='bx bx-cart'></i>
                         <p>Giỏ hàng</p>
                     </a></li>
                 <li>
@@ -145,7 +145,7 @@
                 </li>
 
                 <li><a href="#"><i class='bx bxs-watch-alt'></i><span>Smartwatch</span></a></li>
-                <li><a href="#"><i class='bx bxs-watch'></i><span>Đồng hồ</span></a></li>
+                <li><a href="/index.html"><i class='bx bxs-watch'></i><span>Đồng hồ</span></a></li>
                 <li><a href="#"><i class='bx bx-mobile'></i><span>Máy cũ giá rẻ</span></a></li>
                 <li><a href="#"><box-icon name='desktop'></box-icon><span>PC, Máy in</span><i
                             class='bx bxs-down-arrow'></i></a>
