--- a/product_details.html
+++ b/product_details.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi tiết sản phẩm</title>
-    <link rel="stylesheet" href="Thang.css">
-    <link rel="stylesheet" href="Hoang.css">
+    <link rel="stylesheet" href="css/Thang.css">
+    <link rel="stylesheet" href="css/Hoang.css">
 
     <link rel="stylesheet" href="product_details.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -19,15 +19,6 @@
     <!-- Thanh quang cao tren -->
     <div class="header-top-bar">
         <div id="topdemo" class="carousel slide" data-bs-ride="carousel">
-
-            <!--nút silde -->
-            <!-- <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#topdemo" data-bs-slide-to="0" class="active"></button>
-                    <button type="button" data-bs-target="#topdemo" data-bs-slide-to="1"></button>
-                    <button type="button" data-bs-target="#topdemo" data-bs-slide-to="2"></button>
-                    <button type="button" data-bs-target="#topdemo" data-bs-slide-to="3"></button>
-                    <button type="button" data-bs-target="#topdemo" data-bs-slide-to="4"></button>
-                </div> -->
 
             <!-- khối silde -->
             <div class="carousel-inner">
@@ -698,5 +689,4 @@
     </div>
     <script src="Thegioididong.js"></script>
 </body>
-
 </html>
