--- a/product_details.html
+++ b/product_details.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/Thang.css">
     <link rel="stylesheet" href="css/Hoang.css">
 
-    <link rel="stylesheet" href="css/card_product.css">
+    <link rel="stylesheet" href="/css/product_details.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
